Eliminación del paso 5)
Era bonito, pero no tenía futuro.

--- a/L4.ipynb
+++ b/L4.ipynb
@@ -12,8 +12,7 @@
     "1) Se cambian los valores de la varianza y la media para vaC.\n",
     "2) Se crean las nuevas variableas aleatorias vaO y vaT con sus respectivos valores.\n",
     "3) Luego se crean las constantes de O y Th con el valor medio dentro del rango respectivo.\n",
-    "4) Se editan las ecuaciones de E[X(t)] y Rxx con los valores dados en la práctica.\n",
-    "5) :)"
+    "4) Se editan las ecuaciones de E[X(t)] y Rxx con los valores dados en la práctica."
    ]
   },
   {
